<resources>
    <string name="app_name">Tenali\'s Mart</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Food Items</string>
    <string name="tab_text_3">Grocery</string>
    <string name="tab_text_4">Beverages</string>
    <string name="tab_text_5">Detergents</string>
    <string name="tab_text_6">Kitchen &amp; Cleaning</string>
    <string name="tab_text_7">Other</string>
    <string name="cart">Cart</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="no_account">No account ?</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="phone_number">Phone Number</string>
    <string name="design">design</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="logout">LogOut</string>
    <string name="otp">OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="admin">Admin</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="mrp">MRP</string>
    <string name="food">food</string>
    <string name="grocery">grocery</string>
    <string name="beverage">beverage</string>
    <string name="detergents">detergents</string>
    <string name="other">other</string>
    <string name="image_url">Image Url</string>
    <string name="or">OR</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_item">Add Item</string>
    <string name="orders">Orders</string>
    <string name="your_name">Your Name</string>
    <string name="total_cost_0_0">Total Cost : 0.0</string>
    <string name="proceed">Proceed</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="order_by">Order By :</string>
    <string name="phone_number_">Phone Number :</string>
    <string name="search">Search</string>
    <string name="kitchen">kitchen</string>
    <string name="image">image</string>
    <string name="delete_all">Delete All</string>
    <string name="bill">Bill</string>
    <string name="address">Address</string>
    <string name="price">Price :</string>
    <string name="add">Add</string>
    <string name="ad">ad</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="save">Save</string>
    <string name="add_items">Add Items</string>
    <string name="ad1">Ad1</string>
    <string name="ad2">Ad2</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="pay_with_google_pay">Pay with Google Pay</string>
    <string name="count_1">Count : 1</string>
</resources>