<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <Button
        android:id="@+id/minus"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="0dp"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/count"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/app_name"
        android:enabled="false"
        android:hint="@string/_1"
        android:inputType="none"
        android:text="@string/_1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="0dp"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/count"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>